log
Fri 12 Aug 2022 01:03:10 PM UTC: 
 tests:  0|7
total_score: 0/70
cd1db9d
Fri 12 Aug 2022 01:04:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f984400
Fri 12 Aug 2022 01:11:15 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: expected expression before ‘int’
   40 |   *suma = sumaN(int[a], int m);
      |                 ^~~
exercises.c:40:11: error: too few arguments to function ‘sumaN’
   40 |   *suma = sumaN(int[a], int m);
      |           ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
b60c349
Fri 12 Aug 2022 01:11:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: expected expression before ‘int’
   40 |   *suma = sumaN(int a[], int m);
      |                 ^~~
exercises.c:40:11: error: too few arguments to function ‘sumaN’
   40 |   *suma = sumaN(int a[], int m);
      |           ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
69ecef8
Fri 12 Aug 2022 01:11:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:9: error: expected expression before ‘int’
   40 |   sumaN(int a[], int m);
      |         ^~~
exercises.c:40:3: error: too few arguments to function ‘sumaN’
   40 |   sumaN(int a[], int m);
      |   ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
cf87455
Fri 12 Aug 2022 01:12:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
75f8356
Fri 12 Aug 2022 01:19:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   40 |   *suma = sumaN(n,m)
      |                 ^
      |                 |
      |                 int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c:40:21: error: expected ‘;’ before ‘}’ token
   40 |   *suma = sumaN(n,m)
      |                     ^
      |                     ;
......
   43 | }
      | ~                    
cc1: all warnings being treated as errors
Compilation failed
035c0bf
Fri 12 Aug 2022 01:19:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   40 |   *suma = sumaN(n,m);
      |                 ^
      |                 |
      |                 int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3d4c483
